Padaryta sekcija su fonu

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
     font-family: roboto;
+    font-size: 20px;
   }
 
 body {
@@ -7,12 +8,12 @@ body {
 }
 
 .karkasas {
-    width: 1000px;
-    margin: 10px auto;
+    width: 64rem;
+    margin: 1rem auto;
     background-color: white;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     box-shadow: 1px 1px 5px rgb(0,0,0,0.2);
-    padding: 50px;
+    padding: 5rem;
 }
 
 header {
@@ -22,7 +23,7 @@ header {
 }
 
 header img {
-    width: 150px;
+    width: 15%;
 }
 
 header a {
@@ -33,4 +34,37 @@ header a {
 
 header a:last-child {
     color: rgb(255, 94, 171);
+}
+
+.signup-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 30rem;
+}
+.signup-container img {
+   width: 30rem;
+   margin: auto;
+}
+
+.section-su-fonu {
+    background-image: url(background.svg);
+    height: 16rem;
+    width: 64rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    
+}
+
+.section-su-fonu p {
+    padding-left: 3rem;
+    padding-bottom: 2rem;
+
+}
+
+.section-su-fonu h2{
+    padding-left: 3rem;
+    font-size: 2rem;
+    font-weight: normal;
 }
