--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ header a:last-child {
    margin: auto;
 }
 
-.section-su-fonu {
+.sekcija-su-fonu {
     background-image: url(background.svg);
     height: 16rem;
     width: 64rem;
@@ -57,14 +57,20 @@ header a:last-child {
     
 }
 
-.section-su-fonu p {
+.sekcija-su-fonu p {
     padding-left: 3rem;
     padding-bottom: 2rem;
 
 }
 
-.section-su-fonu h2{
+.sekcija-su-fonu h2{
     padding-left: 3rem;
     font-size: 2rem;
     font-weight: normal;
+}
+
+.sekcija-ikonos {
+    display: flex;
+    justify-content: space-between;
+    margin: 6rem 0;
 }
