--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
-    font-family: roboto;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
+    font-weight:300;
   }
 
 body {
@@ -86,11 +87,10 @@ header a:last-child:hover {
 button {
     padding: 1rem;
     margin-bottom: 3rem;
-    border: 4px, solid transparent;
+    border: 5px, outset rgb(239, 93, 93);
     width: 9rem;
     border-radius: 2rem;
     background-color: white;
-    border-image: linear-gradient(#f63c80, #a3c984) 30%;
 }
 
 .sekcija-su-fonu {
@@ -172,4 +172,47 @@ section:nth-of-type(5) {
 .signup-container-elementas h2 {
     font-weight: bold;
     font-size: 2.5rem;
+}
+
+.footer-apatine-juosta {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-apatine-juosta p, .footer-logo-ikonos a {
+    color: rgb(159, 159, 159);
+}
+
+.footer-karkasas {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem 0;
+}
+
+.footer-logo-ikonos {
+    flex: 50%;
+}
+
+.footer-ikonos {
+    width: 8rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-nuorodos {
+    display: flex;
+    justify-content: space-between;
+    flex: 50%;
+}
+
+.footer-nuorodos a {
+    display: block;
+    text-decoration: none;
+    color: rgb(119, 119, 119);
+    padding-bottom: 0.5rem;
+}
+
+.footer-nuorodos h5 {
+    color: rgb(85, 85, 85);
 }
